// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colors utilities getCSSColors should generate a CSS colors from a Colors object 1`] = `
Object {
  "colorIntents": Object {
    "accessibilityColor": "hsl(222deg 50% 64% / 100%)",
    "background0": "hsl(10deg 10% 0% / 100%)",
    "background1": "hsl(10deg 10% 6% / 100%)",
    "background2": "hsl(10deg 10% 9% / 100%)",
    "backgroundDisabled": "hsl(10deg 10% 10% / 100%)",
    "current": "current",
    "dangerAction": "hsl(200deg 50% 50% / 100%)",
    "dangerBackground": "hsl(200deg 50% 22% / 100%)",
    "dangerText": "hsl(200deg 50% 78% / 100%)",
    "disabledText": "hsl(10deg 10% 40% / 100%)",
    "disabledTextReversed": "hsl(10deg 10% 10% / 100%)",
    "primary": "hsl(222deg 50% 50% / 100%)",
    "primaryReversed": "hsl(10deg 10% 100% / 100%)",
    "primaryText": "hsl(10deg 10% 90% / 100%)",
    "primaryTextReversed": "hsl(10deg 10% 100% / 100%)",
    "secondary": "hsl(200deg 50% 50% / 100%)",
    "secondaryReversed": "hsl(10deg 10% 100% / 100%)",
    "secondaryText": "hsl(10deg 10% 80% / 100%)",
    "secondaryTextReversed": "hsl(10deg 10% 100% / 100%)",
    "successAction": "hsl(200deg 50% 50% / 100%)",
    "successBackground": "hsl(200deg 50% 22% / 100%)",
    "successText": "hsl(200deg 50% 78% / 100%)",
    "tertiaryText": "hsl(10deg 10% 70% / 100%)",
    "tertiaryTextReversed": "hsl(10deg 10% 100% / 100%)",
    "transparent": "transparent",
    "warningAction": "hsl(200deg 50% 50% / 100%)",
    "warningBackground": "hsl(200deg 50% 22% / 100%)",
    "warningText": "hsl(200deg 50% 78% / 100%)",
  },
  "colors": Object {
    "accent1": Object {
      "100": "hsl(200deg 50% 22% / 100%)",
      "300": "hsl(200deg 50% 36% / 100%)",
      "500": "hsl(200deg 50% 50% / 100%)",
      "700": "hsl(200deg 50% 64% / 100%)",
      "900": "hsl(200deg 50% 78% / 100%)",
    },
    "accent2": Object {
      "100": "hsl(200deg 50% 22% / 100%)",
      "300": "hsl(200deg 50% 36% / 100%)",
      "500": "hsl(200deg 50% 50% / 100%)",
      "700": "hsl(200deg 50% 64% / 100%)",
      "900": "hsl(200deg 50% 78% / 100%)",
    },
    "accent3": Object {
      "100": "hsl(200deg 50% 22% / 100%)",
      "300": "hsl(200deg 50% 36% / 100%)",
      "500": "hsl(200deg 50% 50% / 100%)",
      "700": "hsl(200deg 50% 64% / 100%)",
      "900": "hsl(200deg 50% 78% / 100%)",
    },
    "current": "currentColor",
    "effectTransparentHeavy": "hsl(222deg 5% 50% / 100%)",
    "effectTransparentLight": "hsl(222deg 5% 50% / 100%)",
    "effectTransparentMedium": "hsl(222deg 5% 50% / 100%)",
    "grey": Object {
      "0": "hsl(10deg 10% 0% / 100%)",
      "0-reversed": "hsl(10deg 10% 100% / 100%)",
      "100": "hsl(10deg 10% 10% / 100%)",
      "100-reversed": "hsl(10deg 10% 0% / 100%)",
      "1000": "hsl(10deg 10% 95% / 100%)",
      "200": "hsl(10deg 10% 20% / 100%)",
      "200-reversed": "hsl(10deg 10% 0% / 100%)",
      "25": "hsl(10deg 10% 6% / 100%)",
      "300": "hsl(10deg 10% 30% / 100%)",
      "400": "hsl(10deg 10% 40% / 100%)",
      "50": "hsl(10deg 10% 9% / 100%)",
      "500": "hsl(10deg 10% 50% / 100%)",
      "600": "hsl(10deg 10% 60% / 100%)",
      "700": "hsl(10deg 10% 70% / 100%)",
      "800": "hsl(10deg 10% 80% / 100%)",
      "900": "hsl(10deg 10% 90% / 100%)",
    },
    "primary": Object {
      "100": "hsl(222deg 50% 22% / 100%)",
      "300": "hsl(222deg 50% 36% / 100%)",
      "500": "hsl(222deg 50% 50% / 100%)",
      "700": "hsl(222deg 50% 64% / 100%)",
      "900": "hsl(222deg 50% 78% / 100%)",
    },
    "transparent": "hsl(0deg 0% 0% / 0%)",
    "utilityGreen": Object {
      "100": "hsl(200deg 50% 22% / 100%)",
      "300": "hsl(200deg 50% 36% / 100%)",
      "500": "hsl(200deg 50% 50% / 100%)",
      "700": "hsl(200deg 50% 64% / 100%)",
      "900": "hsl(200deg 50% 78% / 100%)",
    },
    "utilityRed": Object {
      "100": "hsl(200deg 50% 22% / 100%)",
      "300": "hsl(200deg 50% 36% / 100%)",
      "500": "hsl(200deg 50% 50% / 100%)",
      "700": "hsl(200deg 50% 64% / 100%)",
      "900": "hsl(200deg 50% 78% / 100%)",
    },
    "utilityYellow": Object {
      "100": "hsl(200deg 50% 22% / 100%)",
      "300": "hsl(200deg 50% 36% / 100%)",
      "500": "hsl(200deg 50% 50% / 100%)",
      "700": "hsl(200deg 50% 64% / 100%)",
      "900": "hsl(200deg 50% 78% / 100%)",
    },
  },
  "gradients": Object {
    "gradient1": "linear-gradient(45deg, hsl(200deg 50% 22% / 100%) ,hsl(200deg 50% 50% / 100%) 100)",
    "gradient2": "linear-gradient(45deg, hsl(200deg 50% 22% / 100%) ,hsl(200deg 50% 50% / 100%) 100)",
    "gradient3": "linear-gradient(45deg, hsl(200deg 50% 22% / 100%) ,hsl(200deg 50% 50% / 100%) 100)",
  },
  "var": Array [
    "var(--color-transparent)",
    "var(--color-primary-100)",
    "var(--color-primary-300)",
    "var(--color-primary-500)",
    "var(--color-primary-700)",
    "var(--color-primary-900)",
    "var(--color-accent1-100)",
    "var(--color-accent1-300)",
    "var(--color-accent1-500)",
    "var(--color-accent1-700)",
    "var(--color-accent1-900)",
    "var(--color-accent2-100)",
    "var(--color-accent2-300)",
    "var(--color-accent2-500)",
    "var(--color-accent2-700)",
    "var(--color-accent2-900)",
    "var(--color-accent3-100)",
    "var(--color-accent3-300)",
    "var(--color-accent3-500)",
    "var(--color-accent3-700)",
    "var(--color-accent3-900)",
    "var(--color-grey-0)",
    "var(--color-grey-25)",
    "var(--color-grey-50)",
    "var(--color-grey-100)",
    "var(--color-grey-200)",
    "var(--color-grey-300)",
    "var(--color-grey-400)",
    "var(--color-grey-500)",
    "var(--color-grey-600)",
    "var(--color-grey-700)",
    "var(--color-grey-800)",
    "var(--color-grey-900)",
    "var(--color-grey-1000)",
    "var(--color-grey-0-reversed)",
    "var(--color-grey-100-reversed)",
    "var(--color-grey-200-reversed)",
    "var(--color-effect-transparent-light)",
    "var(--color-effect-transparent-medium)",
    "var(--color-effect-transparent-heavy)",
    "var(--color-utility-green-100)",
    "var(--color-utility-green-300)",
    "var(--color-utility-green-500)",
    "var(--color-utility-green-700)",
    "var(--color-utility-green-900)",
    "var(--color-utility-yellow-100)",
    "var(--color-utility-yellow-300)",
    "var(--color-utility-yellow-500)",
    "var(--color-utility-yellow-700)",
    "var(--color-utility-yellow-900)",
    "var(--color-utility-red-100)",
    "var(--color-utility-red-300)",
    "var(--color-utility-red-500)",
    "var(--color-utility-red-700)",
    "var(--color-utility-red-900)",
    "var(--color-intent-accessibility-color)",
    "var(--color-intent-transparent)",
    "var(--color-intent-primary)",
    "var(--color-intent-primary-reversed)",
    "var(--color-intent-secondary)",
    "var(--color-intent-secondary-reversed)",
    "var(--color-intent-primary-text)",
    "var(--color-intent-primary-text-reversed)",
    "var(--color-intent-secondary-text)",
    "var(--color-intent-secondary-text-reversed)",
    "var(--color-intent-tertiary-text)",
    "var(--color-intent-tertiary-text-reversed)",
    "var(--color-intent-disabled-text)",
    "var(--color-intent-disabled-text-reversed)",
    "var(--color-intent-success-text)",
    "var(--color-intent-success-action)",
    "var(--color-intent-success-background)",
    "var(--color-intent-warning-text)",
    "var(--color-intent-warning-action)",
    "var(--color-intent-warning-background)",
    "var(--color-intent-danger-text)",
    "var(--color-intent-danger-action)",
    "var(--color-intent-danger-background)",
    "var(--color-intent-background0)",
    "var(--color-intent-background1)",
    "var(--color-intent-background2)",
    "var(--color-intent-background-disabled)",
  ],
  "varNames": Array [
    "--color-transparent",
    "--color-primary-100",
    "--color-primary-300",
    "--color-primary-500",
    "--color-primary-700",
    "--color-primary-900",
    "--color-accent1-100",
    "--color-accent1-300",
    "--color-accent1-500",
    "--color-accent1-700",
    "--color-accent1-900",
    "--color-accent2-100",
    "--color-accent2-300",
    "--color-accent2-500",
    "--color-accent2-700",
    "--color-accent2-900",
    "--color-accent3-100",
    "--color-accent3-300",
    "--color-accent3-500",
    "--color-accent3-700",
    "--color-accent3-900",
    "--color-grey-0",
    "--color-grey-25",
    "--color-grey-50",
    "--color-grey-100",
    "--color-grey-200",
    "--color-grey-300",
    "--color-grey-400",
    "--color-grey-500",
    "--color-grey-600",
    "--color-grey-700",
    "--color-grey-800",
    "--color-grey-900",
    "--color-grey-1000",
    "--color-grey-0-reversed",
    "--color-grey-100-reversed",
    "--color-grey-200-reversed",
    "--color-effect-transparent-light",
    "--color-effect-transparent-medium",
    "--color-effect-transparent-heavy",
    "--color-utility-green-100",
    "--color-utility-green-300",
    "--color-utility-green-500",
    "--color-utility-green-700",
    "--color-utility-green-900",
    "--color-utility-yellow-100",
    "--color-utility-yellow-300",
    "--color-utility-yellow-500",
    "--color-utility-yellow-700",
    "--color-utility-yellow-900",
    "--color-utility-red-100",
    "--color-utility-red-300",
    "--color-utility-red-500",
    "--color-utility-red-700",
    "--color-utility-red-900",
    "--color-intent-accessibility-color",
    "--color-intent-transparent",
    "--color-intent-primary",
    "--color-intent-primary-reversed",
    "--color-intent-secondary",
    "--color-intent-secondary-reversed",
    "--color-intent-primary-text",
    "--color-intent-primary-text-reversed",
    "--color-intent-secondary-text",
    "--color-intent-secondary-text-reversed",
    "--color-intent-tertiary-text",
    "--color-intent-tertiary-text-reversed",
    "--color-intent-disabled-text",
    "--color-intent-disabled-text-reversed",
    "--color-intent-success-text",
    "--color-intent-success-action",
    "--color-intent-success-background",
    "--color-intent-warning-text",
    "--color-intent-warning-action",
    "--color-intent-warning-background",
    "--color-intent-danger-text",
    "--color-intent-danger-action",
    "--color-intent-danger-background",
    "--color-intent-background0",
    "--color-intent-background1",
    "--color-intent-background2",
    "--color-intent-background-disabled",
  ],
}
`;

exports[`colors utilities getCSSVarNamesForColors should generate CSS statement to access Colors CSS vars 1`] = `
Array [
  "var(--color-transparent)",
  "var(--color-primary-100)",
  "var(--color-primary-300)",
  "var(--color-primary-500)",
  "var(--color-primary-700)",
  "var(--color-primary-900)",
  "var(--color-accent1-100)",
  "var(--color-accent1-300)",
  "var(--color-accent1-500)",
  "var(--color-accent1-700)",
  "var(--color-accent1-900)",
  "var(--color-accent2-100)",
  "var(--color-accent2-300)",
  "var(--color-accent2-500)",
  "var(--color-accent2-700)",
  "var(--color-accent2-900)",
  "var(--color-accent3-100)",
  "var(--color-accent3-300)",
  "var(--color-accent3-500)",
  "var(--color-accent3-700)",
  "var(--color-accent3-900)",
  "var(--color-grey-0)",
  "var(--color-grey-25)",
  "var(--color-grey-50)",
  "var(--color-grey-100)",
  "var(--color-grey-200)",
  "var(--color-grey-300)",
  "var(--color-grey-400)",
  "var(--color-grey-500)",
  "var(--color-grey-600)",
  "var(--color-grey-700)",
  "var(--color-grey-800)",
  "var(--color-grey-900)",
  "var(--color-grey-1000)",
  "var(--color-grey-0-reversed)",
  "var(--color-grey-100-reversed)",
  "var(--color-grey-200-reversed)",
  "var(--color-effect-transparent-light)",
  "var(--color-effect-transparent-medium)",
  "var(--color-effect-transparent-heavy)",
  "var(--color-utility-green-100)",
  "var(--color-utility-green-300)",
  "var(--color-utility-green-500)",
  "var(--color-utility-green-700)",
  "var(--color-utility-green-900)",
  "var(--color-utility-yellow-100)",
  "var(--color-utility-yellow-300)",
  "var(--color-utility-yellow-500)",
  "var(--color-utility-yellow-700)",
  "var(--color-utility-yellow-900)",
  "var(--color-utility-red-100)",
  "var(--color-utility-red-300)",
  "var(--color-utility-red-500)",
  "var(--color-utility-red-700)",
  "var(--color-utility-red-900)",
  "var(--color-intent-accessibility-color)",
  "var(--color-intent-transparent)",
  "var(--color-intent-primary)",
  "var(--color-intent-primary-reversed)",
  "var(--color-intent-secondary)",
  "var(--color-intent-secondary-reversed)",
  "var(--color-intent-primary-text)",
  "var(--color-intent-primary-text-reversed)",
  "var(--color-intent-secondary-text)",
  "var(--color-intent-secondary-text-reversed)",
  "var(--color-intent-tertiary-text)",
  "var(--color-intent-tertiary-text-reversed)",
  "var(--color-intent-disabled-text)",
  "var(--color-intent-disabled-text-reversed)",
  "var(--color-intent-success-text)",
  "var(--color-intent-success-action)",
  "var(--color-intent-success-background)",
  "var(--color-intent-warning-text)",
  "var(--color-intent-warning-action)",
  "var(--color-intent-warning-background)",
  "var(--color-intent-danger-text)",
  "var(--color-intent-danger-action)",
  "var(--color-intent-danger-background)",
  "var(--color-intent-background0)",
  "var(--color-intent-background1)",
  "var(--color-intent-background2)",
  "var(--color-intent-background-disabled)",
]
`;

exports[`colors utilities getCSSVarNamesForColors should generate CSS variable names for a given Colors object 1`] = `
Array [
  "--color-transparent",
  "--color-primary-100",
  "--color-primary-300",
  "--color-primary-500",
  "--color-primary-700",
  "--color-primary-900",
  "--color-accent1-100",
  "--color-accent1-300",
  "--color-accent1-500",
  "--color-accent1-700",
  "--color-accent1-900",
  "--color-accent2-100",
  "--color-accent2-300",
  "--color-accent2-500",
  "--color-accent2-700",
  "--color-accent2-900",
  "--color-accent3-100",
  "--color-accent3-300",
  "--color-accent3-500",
  "--color-accent3-700",
  "--color-accent3-900",
  "--color-grey-0",
  "--color-grey-25",
  "--color-grey-50",
  "--color-grey-100",
  "--color-grey-200",
  "--color-grey-300",
  "--color-grey-400",
  "--color-grey-500",
  "--color-grey-600",
  "--color-grey-700",
  "--color-grey-800",
  "--color-grey-900",
  "--color-grey-1000",
  "--color-grey-0-reversed",
  "--color-grey-100-reversed",
  "--color-grey-200-reversed",
  "--color-effect-transparent-light",
  "--color-effect-transparent-medium",
  "--color-effect-transparent-heavy",
  "--color-utility-green-100",
  "--color-utility-green-300",
  "--color-utility-green-500",
  "--color-utility-green-700",
  "--color-utility-green-900",
  "--color-utility-yellow-100",
  "--color-utility-yellow-300",
  "--color-utility-yellow-500",
  "--color-utility-yellow-700",
  "--color-utility-yellow-900",
  "--color-utility-red-100",
  "--color-utility-red-300",
  "--color-utility-red-500",
  "--color-utility-red-700",
  "--color-utility-red-900",
  "--color-intent-accessibility-color",
  "--color-intent-transparent",
  "--color-intent-primary",
  "--color-intent-primary-reversed",
  "--color-intent-secondary",
  "--color-intent-secondary-reversed",
  "--color-intent-primary-text",
  "--color-intent-primary-text-reversed",
  "--color-intent-secondary-text",
  "--color-intent-secondary-text-reversed",
  "--color-intent-tertiary-text",
  "--color-intent-tertiary-text-reversed",
  "--color-intent-disabled-text",
  "--color-intent-disabled-text-reversed",
  "--color-intent-success-text",
  "--color-intent-success-action",
  "--color-intent-success-background",
  "--color-intent-warning-text",
  "--color-intent-warning-action",
  "--color-intent-warning-background",
  "--color-intent-danger-text",
  "--color-intent-danger-action",
  "--color-intent-danger-background",
  "--color-intent-background0",
  "--color-intent-background1",
  "--color-intent-background2",
  "--color-intent-background-disabled",
]
`;
